--- a/ressourcesqtdesign.qrc
+++ b/ressourcesqtdesign.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/images">
         <file>bkg.bmp</file>
+        <file>dirt.png</file>
+        <file>grass.png</file>
     </qresource>
 </RCC>
